src/styles.css
/* Style rules taken from Bootstrap, as it cannot be implemented as it breaks PrimeNG styling */

.alert {
    position: relative;
    padding: 0.75rem 1.25rem;
    margin-bottom: 1rem;
    border: 1px solid transparent;
    border-radius: 0.25rem;
  }

  .alert-danger {
    color: #721c24;
    background-color: #f8d7da;
    border-color: #f5c6cb;
  }

  .alert-warning {
    color: #856404;
    background-color: #fff3cd;
    border-color: #ffeeba;
  }

  .form-group {
    margin-bottom: 1rem;
  }

  .form-control {
    display: block;
    width: 100%;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  }

  /*******************End Bootstrap Rules **************************************/

  .chip {
    padding: 0 8px;
    /*height: 50px;*/
    font-size: .8em;
    line-height: .8em;
    border-radius: 8px;
    background-color: #867e7e;
    color:#fff;
    padding:5% 5%;
    text-align: center;
}

/*********************PrimeNG Style overrides*************************************/

.ui-treenode-content {
    min-width:140px !important;
}

.ui-treenode-label {
    width:100% !important;
}

/***********************End PrimeNG overrides*************************************/

